--- a/app/src/main/res/layout/activity_will_print.xml
+++ b/app/src/main/res/layout/activity_will_print.xml
@@ -60,7 +60,7 @@
         android:text="@string/si" />
 
     <Button
-        android:id="@+id/btn_np"
+        android:id="@+id/btn_no"
         android:layout_width="287dp"
         android:layout_height="70dp"
         android:layout_marginStart="45dp"
