--- a/app/src/main/res/layout/activity_print_license.xml
+++ b/app/src/main/res/layout/activity_print_license.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:hint="@string/e_mail"
+            android:hint="@string/dni"
             android:textColor="@color/black"
             android:textSize="30sp"
             tools:ignore="DuplicateIds,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
