--- a/app/src/main/res/layout/activity_charge_fee.xml
+++ b/app/src/main/res/layout/activity_charge_fee.xml
@@ -37,7 +37,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/lbl_number"
+                android:id="@+id/lbl_numberCC"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="@string/nro_de_socio_3510"
@@ -45,7 +45,7 @@
                 tools:ignore="TextSizeCheck" />
 
             <TextView
-                android:id="@+id/lbl_dni"
+                android:id="@+id/lbl_dniCC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -65,14 +65,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/lbl_name"
+                android:id="@+id/lbl_nameCC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nombre_mariela"
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/lbl_surname"
+                android:id="@+id/lbl_surnameCC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
